force-app/main/default/objects/Loan__c/fields/Logged_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_Date__c</fullName>
    <label>Logged In Date</label>
    <type>Date</type>
</CustomField>