force-app/main/default/objects/Loan__c/fields/Net_Gross__c.field-meta.xml
<CustomField>
    <fullName>Net_Gross__c</fullName>
    <formula>IF(ISPICKVAL(RW_APF__r.Net_Gross__c, &apos;Net&apos;) , &apos;Net&apos;, IF(ISPICKVAL(RW_APF__r.Net_Gross__c, &apos;Gross&apos;), &apos;Gross&apos;, null))</formula>
    <label>Net/Gross</label>
    <type>Text</type>
</CustomField>