force-app/main/default/objects/Loan__c/fields/No_Of_Days_From_Booking_To_Loan__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_From_Booking_To_Loan__c</fullName>
    <formula>CreatedDate - RW_Booking__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days From Booking To Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>