force-app/main/default/objects/Loan__c/fields/No_Of_Days_From_Disb_Doc_Submitted__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_From_Disb_Doc_Submitted__c</fullName>
    <formula>IF( NOT(ISNULL( Disbursement_Document_Submitted_Date__c )) , TODAY() - Disbursement_Document_Submitted_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days From Disb Doc Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>