force-app/main/default/objects/Loan__c/fields/No_Of_Days_From_Lead_Assigned__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_From_Lead_Assigned__c</fullName>
    <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days From Lead Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>