force-app/main/default/objects/Loan__c/fields/No_Of_Days_From_Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_From_Next_Follow_up_Date__c</fullName>
    <formula>IF( NOT(ISNULL( Next_Follow_up_Date__c )) , TODAY() - DATEVALUE(Next_Follow_up_Date__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days From Next Follow up Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>