force-app/main/default/objects/Loan__c/fields/No_Of_Days_From_NOC_Handower__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_From_NOC_Handower__c</fullName>
    <formula>IF( NOT(ISNULL( NOC_Handover_Date__c )) , TODAY() - NOC_Handover_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days From NOC Handower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>