force-app/main/default/objects/Loan__c/fields/No_Of_Days_From_Registration__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_From_Registration__c</fullName>
    <formula>IF( NOT(ISNULL(Registration_Date__c)) , TODAY() - Registration_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Days From Registration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>