force-app/main/default/objects/Loan__c/fields/NOC_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Handover_Date__c</fullName>
    <label>NOC Handover Date</label>
    <type>Date</type>
</CustomField>