force-app/main/default/objects/Loan__c/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collectible</fullName>
            </value>
            <value>
                <fullName>Non-Collectible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>