force-app/main/default/objects/Loan__c/fields/Promise_To_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Promise_To_Pay_Date__c</fullName>
    <label>Promise To Pay Date</label>
    <type>Date</type>
</CustomField>