force-app/main/default/objects/Loan__c/fields/Remaining_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Disbursement_Amount__c</fullName>
    <formula>RW_Sanction_Amount__c  -   Total_Disbursed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>