force-app/main/default/objects/Loan__c/fields/RM_Email__c.field-meta.xml
<CustomField>
    <fullName>RM_Email__c</fullName>
    <formula>HL_RM__r.RM_Email__c</formula>
    <label>RM Email</label>
    <type>Text</type>
</CustomField>