force-app/main/default/objects/Loan__c/fields/ROC_Clause_for_NOC__c.field-meta.xml
<CustomField>
    <fullName>ROC_Clause_for_NOC__c</fullName>
    <label>ROC Clause - for NOC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>