force-app/main/default/objects/Loan__c/fields/RW_Aadhar_no__c.field-meta.xml
<CustomField>
    <fullName>RW_Aadhar_no__c</fullName>
    <label>Aadhar no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>