force-app/main/default/objects/Loan__c/fields/RW_APF__c.field-meta.xml
<CustomField>
    <fullName>RW_APF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APF</label>
    <referenceTo>APF__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>