force-app/main/default/objects/Loan__c/fields/RW_Bank_Addresses__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Addresses__c</fullName>
    <label>Bank Address</label>
    <type>TextArea</type>
</CustomField>