force-app/main/default/objects/Loan__c/fields/RW_Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Branch__c</fullName>
    <label>Bank Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>