force-app/main/default/objects/Loan__c/fields/RW_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Housing Finance ltd</fullName>
            </value>
            <value>
                <fullName>Aavas Housing Finance Limited</fullName>
            </value>
            <value>
                <fullName>Abhyudaya Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Aditya Birla Housing Finance Ltd</fullName>
            </value>
            <value>
                <fullName>Ahmedabad Mercantile Co-Op Bank</fullName>
            </value>
            <value>
                <fullName>Akola Janata Commercial Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Akola Urban Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Allahabad Bank</fullName>
            </value>
            <value>
                <fullName>Andaman and Nicobar State Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh Mahesh Co-Op Urban Bank</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh State Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Apna Sahakari Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh State Co-operative Apex Bank</fullName>
            </value>
            <value>
                <fullName>Assam Co-operative Apex Bank</fullName>
            </value>
            <value>
                <fullName>AU SMALL FINANCE BANK</fullName>
            </value>
            <value>
                <fullName>Axis Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Bajaj Finserv Ltd</fullName>
            </value>
            <value>
                <fullName>Bajaj Housing Finance Ltd</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Bassein Catholic Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Bharat Co-operative Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Bharati Sahakari Bank</fullName>
            </value>
            <value>
                <fullName>Bharat Petroleum Corporation Ltd</fullName>
            </value>
            <value>
                <fullName>Bihar State Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Bombay Mercantile Co-operative Bank</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Capri Global Housing Finance</fullName>
            </value>
            <value>
                <fullName>Catholic Syrian Bank Ltd.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>