force-app/main/default/objects/Loan__c/fields/RW_Bank_Preference_2__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Preference_2__c</fullName>
    <label>Bank Preference 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Names</valueSetName>
    </valueSet>
</CustomField>