force-app/main/default/objects/Loan__c/fields/RW_Bank_Statement__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Statement__c</fullName>
    <label>Bank Statement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>