force-app/main/default/objects/Loan__c/fields/RW_Banker_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Banker_Email__c</fullName>
    <label>Banker Email</label>
    <type>Email</type>
</CustomField>