force-app/main/default/objects/Loan__c/fields/RW_Banker_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Banker_Name__c</fullName>
    <label>Banker Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>