force-app/main/default/objects/Loan__c/fields/RW_Booking__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>