force-app/main/default/objects/Loan__c/fields/RW_Customer_Loan_Preference__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer_Loan_Preference__c</fullName>
    <label>Customer Loan Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>