force-app/main/default/objects/Loan__c/fields/RW_Driving_License__c.field-meta.xml
<CustomField>
    <fullName>RW_Driving_License__c</fullName>
    <label>Driving License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>