force-app/main/default/objects/Loan__c/fields/RW_First_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_First_Disbursement_Amount__c</fullName>
    <label>First Disbursement Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>