force-app/main/default/objects/Loan__c/fields/RW_First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_First_Disbursement_Date__c</fullName>
    <label>First Disbursement Date</label>
    <type>Date</type>
</CustomField>