force-app/main/default/objects/Loan__c/fields/RW_First_Disbursement_Received__c.field-meta.xml
<CustomField>
    <fullName>RW_First_Disbursement_Received__c</fullName>
    <label>First Disbursement Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not yet Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>