force-app/main/default/objects/Loan__c/fields/RW_First_Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_First_Disbursement_Status__c</fullName>
    <label>First Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Received</fullName>
            </value>
            <value>
                <fullName>Awaiting Agreement</fullName>
            </value>
            <value>
                <fullName>Defaulter/Pre-Term Sent</fullName>
            </value>
            <value>
                <fullName>Default Notice Sent</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
            <value>
                <fullName>Docket Submitted to Bank</fullName>
            </value>
            <value>
                <fullName>Docket with Customer</fullName>
            </value>
            <value>
                <fullName>Index II &amp; NOC Submitted</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed</fullName>
            </value>
            <value>
                <fullName>Pendency from Runwal</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>PTN Sent</fullName>
            </value>
            <value>
                <fullName>Ready Docket in Office</fullName>
            </value>
            <value>
                <fullName>Ready Docket with CRM</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Reminder Letter 1 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Letter 2 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Letter 3 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Letter 4 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Letter 5 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Letter 6 Sent</fullName>
            </value>
            <value>
                <fullName>RERA Complaint Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>