force-app/main/default/objects/Loan__c/fields/RW_ITR__c.field-meta.xml
<CustomField>
    <fullName>RW_ITR__c</fullName>
    <label>ITR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>