force-app/main/default/objects/Loan__c/fields/RW_Loan_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Amount_Received__c</fullName>
    <label>Loan Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>