force-app/main/default/objects/Loan__c/fields/RW_Loan_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Closure_Date__c</fullName>
    <label>Loan Closure Date</label>
    <type>Date</type>
</CustomField>