force-app/main/default/objects/Loan__c/fields/RW_Loan_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Record_Status__c</fullName>
    <label>Loan Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Process Initiated</fullName>
            </value>
            <value>
                <fullName>HL Documentation Initiated</fullName>
            </value>
            <value>
                <fullName>File Logged In</fullName>
            </value>
            <value>
                <fullName>Loan Sanctioned</fullName>
            </value>
            <value>
                <fullName>NOC Generated</fullName>
            </value>
            <value>
                <fullName>First Disbursement Received</fullName>
            </value>
            <value>
                <fullName>HL Rejected</fullName>
            </value>
            <value>
                <fullName>Balance Transfer</fullName>
            </value>
            <value>
                <fullName>Loan Closed</fullName>
            </value>
            <value>
                <fullName>Customer non-contactable</fullName>
                <isActive>false</isActive>
                <label>Customer non-contactable</label>
            </value>
            <value>
                <fullName>Customer yet to connect</fullName>
                <isActive>false</isActive>
                <label>Customer yet to connect</label>
            </value>
            <value>
                <fullName>Decline of Sanction</fullName>
                <isActive>false</isActive>
                <label>Decline of Sanction</label>
            </value>
            <value>
                <fullName>Documentation</fullName>
                <isActive>false</isActive>
                <label>Documentation</label>
            </value>
            <value>
                <fullName>Documentation for disbursement</fullName>
                <isActive>false</isActive>
                <label>Documentation for disbursement</label>
            </value>
            <value>
                <fullName>Documents  with customer</fullName>
                <isActive>false</isActive>
                <label>Documents  with customer</label>
            </value>
            <value>
                <fullName>Funding type</fullName>
                <isActive>false</isActive>
                <label>Funding type</label>
            </value>
            <value>
                <fullName>Loan Eligibility issues</fullName>
                <isActive>false</isActive>
                <label>Loan Eligibility issues</label>
            </value>
            <value>
                <fullName>Log in for disbursement</fullName>
                <isActive>false</isActive>
                <label>Log in for disbursement</label>
            </value>
            <value>
                <fullName>Login done with HFC</fullName>
                <isActive>false</isActive>
                <label>Login done with HFC</label>
            </value>
            <value>
                <fullName>Ready for Disbursement</fullName>
                <isActive>false</isActive>
                <label>Ready for Disbursement</label>
            </value>
            <value>
                <fullName>Sales dispute</fullName>
                <isActive>false</isActive>
                <label>Sales dispute</label>
            </value>
            <value>
                <fullName>Sanction received</fullName>
                <isActive>false</isActive>
                <label>Sanction received</label>
            </value>
            <value>
                <fullName>Self- funding</fullName>
                <isActive>false</isActive>
                <label>Self- funding</label>
            </value>
            <value>
                <fullName>Subvention scheme</fullName>
                <isActive>false</isActive>
                <label>Subvention scheme</label>
            </value>
            <value>
                <fullName>Under cancellation</fullName>
                <isActive>false</isActive>
                <label>Under cancellation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>