force-app/main/default/objects/Loan__c/fields/RW_NOC_Generated__c.field-meta.xml
<CustomField>
    <fullName>RW_NOC_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC Generated</label>
    <type>Checkbox</type>
</CustomField>