force-app/main/default/objects/Loan__c/fields/RW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>RW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>