force-app/main/default/objects/Loan__c/fields/RW_Pan_card_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Pan_card_Id__c</fullName>
    <label>Pan card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>