force-app/main/default/objects/Loan__c/fields/RW_Parallel_loan_funding_scenario__c.field-meta.xml
<CustomField>
    <fullName>RW_Parallel_loan_funding_scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parallel loan funding scenario?</label>
    <type>Checkbox</type>
</CustomField>