force-app/main/default/objects/Loan__c/fields/RW_Pari_Passu__c.field-meta.xml
<CustomField>
    <fullName>RW_Pari_Passu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pari Passu</label>
    <type>Checkbox</type>
</CustomField>