force-app/main/default/objects/Loan__c/fields/RW_Passport_Photo__c.field-meta.xml
<CustomField>
    <fullName>RW_Passport_Photo__c</fullName>
    <label>Passport Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>