force-app/main/default/objects/Loan__c/fields/RW_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_Pin_Code__c</fullName>
    <label>Pin Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>