force-app/main/default/objects/Loan__c/fields/RW_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>