force-app/main/default/objects/Loan__c/fields/RW_Reason__c.field-meta.xml
<CustomField>
    <fullName>RW_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan eligibility issues</fullName>
            </value>
            <value>
                <fullName>Switch to another bank</fullName>
            </value>
            <value>
                <fullName>Self-funding</fullName>
            </value>
            <value>
                <fullName>Booking cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>