force-app/main/default/objects/Loan__c/fields/RW_Salary_Slip__c.field-meta.xml
<CustomField>
    <fullName>RW_Salary_Slip__c</fullName>
    <label>Salary Slip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>