force-app/main/default/objects/Loan__c/fields/RW_Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_Sanction_Amount__c</fullName>
    <label>Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>