force-app/main/default/objects/Loan__c/fields/RW_Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Sanction_Date__c</fullName>
    <label>Sanction Date</label>
    <type>Date</type>
</CustomField>