force-app/main/default/objects/Loan__c/fields/RW_Sanction_Letter_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_Sanction_Letter_ID__c</fullName>
    <label>Sanction Letter ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>