force-app/main/default/objects/Loan__c/fields/RW_Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Sanction_Status__c</fullName>
    <label>Sanction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cibil / Eligibility</fullName>
            </value>
            <value>
                <fullName>Customer issue- Sales / CRM</fullName>
            </value>
            <value>
                <fullName>Customer Stalling/Not Submitting Docs</fullName>
            </value>
            <value>
                <fullName>Follow Up / Document Collating</fullName>
            </value>
            <value>
                <fullName>Loan Sanctioned</fullName>
            </value>
            <value>
                <fullName>Logged In- Sanction in Process</fullName>
            </value>
            <value>
                <fullName>Self Funding</fullName>
            </value>
            <value>
                <fullName>Subvention / Deviation</fullName>
            </value>
            <value>
                <fullName>Under Cancellation</fullName>
            </value>
            <value>
                <fullName>Will Apply For Loan After OC</fullName>
            </value>
            <value>
                <fullName>Conditional Sanction</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Sanction Pending</fullName>
                <isActive>false</isActive>
                <label>Sanction Pending</label>
            </value>
            <value>
                <fullName>Sanctioned letter received</fullName>
                <isActive>false</isActive>
                <label>Sanctioned letter received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>