force-app/main/default/objects/Loan__c/fields/RW_Sanction_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Sanction_Unique_Id__c</fullName>
    <label>Sanction Unique Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>