force-app/main/default/objects/Loan__c/fields/RW_TPA_Case__c.field-meta.xml
<CustomField>
    <fullName>RW_TPA_Case__c</fullName>
    <label>TPA Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPA Case</fullName>
            </value>
            <value>
                <fullName>Non TPA Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>