force-app/main/default/objects/Loan__c/fields/RW_TPA_Letter_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_TPA_Letter_Id__c</fullName>
    <label>TPA Letter Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>