force-app/main/default/objects/Loan__c/fields/RW_TPA_Noc_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>RW_TPA_Noc_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPA/Noc Uploaded</label>
    <type>Checkbox</type>
</CustomField>