force-app/main/default/objects/Loan__c/fields/RW_TPA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_TPA_Signed_Date__c</fullName>
    <label>TPA Signed Date</label>
    <type>Date</type>
</CustomField>