force-app/main/default/objects/Loan__c/fields/RW_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Unit_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit No</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>