force-app/main/default/objects/Loan__c/fields/Salary_slip__c.field-meta.xml
<CustomField>
    <fullName>Salary_slip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary slip</label>
    <type>Checkbox</type>
</CustomField>