force-app/main/default/objects/Loan__c/fields/Sanction_Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Connector_Fee__c</fullName>
    <label>Sanction Connector Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>