force-app/main/default/objects/Loan__c/fields/Sanction_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Follow_Up_Date__c</fullName>
    <label>Sanction Follow Up Date</label>
    <type>DateTime</type>
</CustomField>