force-app/main/default/objects/Loan__c/fields/Sanction_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Remarks__c</fullName>
    <label>Sanction Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>